--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -227,7 +227,7 @@ span.accent {
   width: 192px;
   height: 237px;
   display: block;
-  background: url(../images/logo.gif) no-repeat;
+  background: url(../images/DrTMUSHA Professor Data Scientist.jpeg) no-repeat;
   position: absolute;
   top: -25px;
   left: 50px;
